# serial-mqtt-bridge

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: config.toml
src/: config.rs  main.rs
