[package]
name = "serial-mqtt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
ctrlc = "3.2"
env_logger = "0.9.0"
serialport = "4.1.0"
log = "0.4.17"
paho-mqtt = { version = "0.11.1", default-features = false, features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
toml = "0.5.9"
