[package]
name = "serial-mqtt-bridge"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4.0.15", features = ["derive"] }
ctrlc = "3.2"
env_logger = "0.9.0"
futures = "0.3.21"
humantime-serde = "1.1.1"
log = "0.4.17"
paho-mqtt = { version = "0.11.1", default-features = false, features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serialport = "4.1.0"
toml = "0.5.9"
